# camera_fishing_effort

./: .dockerignore  .gitignore  Dockerfile  README.md  constraints.txt  documentation.md  fly.toml  main.py  pyproject.toml  requirements.txt
documentation/: Training statistics.xlsx  YOLO.md  definitions_and_metrics.md  documentation.md  functions.md  project_modules.md  workflow.md
notebooks/: boat_data.yaml  chokepoint.yaml  chokepoint_model_training.ipynb  demo.ipynb  extracting_metadata.ipynb
notebooks/runs/detect/chokepoint/train/: args.yaml  results.csv
notebooks/runs/detect/chokepoint_finetuned/train/: args.yaml  results.csv
notebooks/runs/detect/yolo_boat_runs/exp/: args.yaml  results.csv
scripts/: chokepoint.py  config.py  constants.py  dataframe.py  fishing.py  utils.py
static/css/: style.css
templates/: image_preview.html  index.html
