[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "camera-fishing-effort"
version = "1.0.0"
description = "FastAPI application for camera fishing effort analysis"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.3",
    "pandas>=2.0.0",
    "Pillow>=10.0.0",
    "ultralytics>=8.0.0",
    "matplotlib>=3.7.0",
]

[[tool.pip.find-links]]
url = "https://download.pytorch.org/whl/cpu"

[tool.pip]
index-url = "https://pypi.org/simple/"
extra-index-url = ["https://download.pytorch.org/whl/cpu"]
